# rotating-cube

./: .gitignore  ActualRotatingCube.c  ActualRotatingCube.sln  ActualRotatingCube.vcxproj  ActualRotatingCube.vcxproj.filters  CMakeLists.txt  Makefile  README.md
inc/: init.h
src/: init-pos.c  init-win.c  rotating-cube.c
